{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 9,
  "lineage": "8cb768e9-6a27-8a18-b0eb-de9bd5b82cf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-nginx-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec0e125bb6c6e8ec",
            "arn": "arn:aws:ec2:ap-south-1:849528909930:instance/i-078b1310acd90b925",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078b1310acd90b925",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da503f110ca68ac1",
            "private_dns": "ip-10-0-2-239.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.239",
            "public_ip": "13.126.25.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-091f9f9449633bfe3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-039784a7ef6a78e70"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059ab6694cdd35f7d",
            "tags": {
              "Environment": "dev",
              "Name": "tf-nginx-instance",
              "Project": "terraform-vpc-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-nginx-instance",
              "Project": "terraform-vpc-demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-039784a7ef6a78e70"
            ]
          },
          "dependencies": [
            "aws_security_group.tf-nginx-security",
            "aws_subnet.tf-vpc-nginx-public-subnet",
            "aws_vpc.tf-vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-nginx-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:849528909930:internet-gateway/igw-0953426aaa95853c2",
            "id": "igw-0953426aaa95853c2",
            "owner_id": "849528909930",
            "tags": {
              "Environment": "dev",
              "Name": "tf-igw",
              "Project": "terraform-vpc-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-igw",
              "Project": "terraform-vpc-demo"
            },
            "vpc_id": "vpc-0777753389c01e091"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-nginx-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:849528909930:route-table/rtb-04059cd91489629b0",
            "id": "rtb-04059cd91489629b0",
            "owner_id": "849528909930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0953426aaa95853c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tf-route-table",
              "Project": "terraform-vpc-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-route-table",
              "Project": "terraform-vpc-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0777753389c01e091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-nginx-igw",
            "aws_vpc.tf-vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-nginx-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ebe33321a0ffc03",
            "route_table_id": "rtb-04059cd91489629b0",
            "subnet_id": "subnet-059ab6694cdd35f7d"
          },
          "dependencies": [
            "aws_internet_gateway.tf-nginx-igw",
            "aws_route_table.tf-nginx-route-table",
            "aws_subnet.tf-vpc-nginx-public-subnet",
            "aws_vpc.tf-vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-nginx-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:849528909930:security-group/sg-039784a7ef6a78e70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039784a7ef6a78e70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240720093501262800000001",
            "name_prefix": "terraform-",
            "owner_id": "849528909930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tf-nginx-sg",
              "Project": "terraform-vpc-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-nginx-sg",
              "Project": "terraform-vpc-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0777753389c01e091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-vpc-nginx-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:849528909930:subnet/subnet-0c711501e8b321d90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c711501e8b321d90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "849528909930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tf-vpc-private-subnet",
              "Project": "terraform-vpc-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-vpc-private-subnet",
              "Project": "terraform-vpc-demo"
            },
            "vpc_id": "vpc-0777753389c01e091"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-vpc-nginx-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:849528909930:subnet/subnet-059ab6694cdd35f7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059ab6694cdd35f7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "849528909930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tf-vpc-public-subnet",
              "Project": "terraform-vpc-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-vpc-public-subnet",
              "Project": "terraform-vpc-demo"
            },
            "vpc_id": "vpc-0777753389c01e091"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:849528909930:vpc/vpc-0777753389c01e091",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01fec672c55069d55",
            "default_route_table_id": "rtb-070f04d78c8839b53",
            "default_security_group_id": "sg-0c4cd77fe7fb30c7b",
            "dhcp_options_id": "dopt-0dfc5a43c917c8a1f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0777753389c01e091",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070f04d78c8839b53",
            "owner_id": "849528909930",
            "tags": {
              "Environment": "dev",
              "Name": "tf-vpc",
              "Project": "terraform-vpc-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-vpc",
              "Project": "terraform-vpc-demo"
            }
          }
        }
      ]
    }
  ]
}